mdmCeneveo/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Year_1_Estimated_Revenue__c</fullName>
        <label>Year 1 Estimated Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_Revenue__c</fullName>
        <description>When opportunity is going to be closed won require to fill this field.</description>
        <label>Year 1 Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_2_Estimated_GM__c</fullName>
        <label>Year 2 Estimated GM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_2_Estimated_Revenue__c</fullName>
        <label>Year 2 Estimated Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_3_Estimated_GM__c</fullName>
        <label>Year 3 Estimated GM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_3_Estimated_Revenue__c</fullName>
        <label>Year 3 Estimated Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com_del__c</fullName>
        <formula>IF( OR(CONTAINS(TEXT(LeadSource),&quot;Jigsaw&quot;),CONTAINS(TEXT(LeadSource),&quot;Data.com&quot;), Account.ddc_prospector__Sourced_from_Data_com__c = 1), &quot;Added from Data.com&quot;,&quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lco1__Activity_Monitor__c</fullName>
        <formula>IF 
(ISNULL(LastActivityDate), 
IMAGE(&quot;/img/samples/flag_red.gif &quot;, &quot;NO ACTIVITIES&quot;),  
IF( lco1__Days_Since_Last_Activity__c &lt;15, 
IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Less than 15&quot;), 
IF( lco1__Days_Since_Last_Activity__c &lt; 30, 
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;15 to 30&quot;),
IF( lco1__Days_Since_Last_Activity__c &gt;29, 
IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;more than 29 days&quot;) ,
IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;more than 29 days&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green Flag = Last Activity &lt;15 days
Yellow Flag = Last Activity between 15 and 30 days
Red Flag = Last Activity &gt;30</inlineHelpText>
        <label>PAM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lco1__Days_Since_Last_Activity__c</fullName>
        <formula>today() -  LastActivityDate</formula>
        <inlineHelpText>This auto calculates the number of days since the last activity was completed.</inlineHelpText>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lco1__YTD_Actual_Amount__c</fullName>
        <formula>IF( YEAR(CloseDate) ==  YEAR(TODAY()),  Amount, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>A1_My_ClosedOpportunities</fullName>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Activity_Monitor__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.FORECAST_CATEGORY</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>O_Push_Counter__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Cenveo</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Introduction,Discovery,Differentiation,Decision,Award</value>
        </filters>
        <label>A2 - My Closed Opportunities</label>
    </listViews>
    <listViews>
        <fullName>A1_My_Opportunities</fullName>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Activity_Monitor__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.FORECAST_CATEGORY</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>O_Push_Counter__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Cenveo</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Introduction,Discovery,Differentiation,Decision,Award</value>
        </filters>
        <label>A1 - My Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>A8_My_WonOpportunities</fullName>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Activity_Monitor__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.FORECAST_CATEGORY</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>O_Push_Counter__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Cenveo</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterThan</operation>
            <value>12/31/2013</value>
        </filters>
        <label>A8- My Won Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Product_Description__c</columns>
        <columns>Won_Lost_Reason__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterThan</operation>
            <value>10/1/2013</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Opportunities with wrong status</label>
    </listViews>
    <listViews>
        <fullName>Cappy_s_Sales_Team</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 or 6 or 7 or 8 or 9</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Filipek,huppi,call,smart</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>KFree</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Hotchkiss,wilde,dike</value>
        </filters>
        <filters>
            <field>CORE.USERS.FULL_NAME</field>
            <operation>equals</operation>
            <value>Mark Evans</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Summers</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Silverstein</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Ribail</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Olsson</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>BAnde</value>
        </filters>
        <label>Cappy&apos;s Sales Team</label>
        <sharedTo>
            <group>Opportunity_view_of_Cappy_s_Sales_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>My_Opportunities_With_Past_Due_Close_Da</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Cenveo</value>
        </filters>
        <label>A5 - My Opportunities Past Close Date</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Customer_Status__c</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>A4 - New Last Week</label>
    </listViews>
    <listViews>
        <fullName>Opportunities_With_Past_Due_Close_Da</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>A6 - ALL Opportunities Past Close Date</label>
    </listViews>
    <listViews>
        <fullName>Sales_Closed_Last_14_Days</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>Sales Closed Last 14 Days</label>
    </listViews>
    <recordTypes>
        <fullName>Cenveo</fullName>
        <active>true</active>
        <businessProcess>Cenveo Sales Process</businessProcess>
        <label>Cenveo</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Best_Case</fullName>
        <active>true</active>
        <description>Validates that the probability of a Best Case opportunity is properly set to &lt; 81%. This is useful for data cleanliness and reporting purposes.</description>
        <errorConditionFormula>AND(ISPICKVAL(  ForecastCategoryName  , &quot;Best Case&quot;),  OR(Probability   &lt;  0.51,  Probability   &gt; 0.80))</errorConditionFormula>
        <errorDisplayField>Probability</errorDisplayField>
        <errorMessage>Probability for Best Case Forecast Category must be between 51% and 80%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Date_Validate</fullName>
        <active>true</active>
        <description>Opportunity can&apos;t be closed with future date</description>
        <errorConditionFormula>If(IsClosed,
  IF(CloseDate &gt; TODAY(),True,False),False)</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>Opportunity can&apos;t be close with future Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Opportunity_Validate_Amount</fullName>
        <active>true</active>
        <description>When Opportunity is going to be close and amount is more than 2.5 lakh than a notification</description>
        <errorConditionFormula>AND(
    AND(
	IsClosed,
	IsWon, 
	Amount &gt;= 250000
       ),
       NOT(
       Amount_Verified__c 
       )
  )</errorConditionFormula>
        <errorMessage>Please verify the amount of the opportunity prior to closing. Notifications will be emailed to all levels of the organization once the opportunity is closed. If the amount is correct, check “Amount Verified?&quot; box. Thank you.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Dropped</fullName>
        <active>true</active>
        <description>If Closed Dropped is Stage, then Prob is 0%</description>
        <errorConditionFormula>AND ( ISPICKVAL(    StageName  , &quot;Closed Dropped&quot;), Probability &lt;&gt; 0)</errorConditionFormula>
        <errorDisplayField>Probability</errorDisplayField>
        <errorMessage>Probability must be 0% for a Dropped Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Lost</fullName>
        <active>true</active>
        <description>If Closed Lost is Stage, then Prob is 0%</description>
        <errorConditionFormula>AND ( ISPICKVAL(    StageName  , &quot;Closed Lost&quot;), Probability &lt;&gt; 0)</errorConditionFormula>
        <errorDisplayField>Probability</errorDisplayField>
        <errorMessage>Probability must be 0% for a Lost Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won</fullName>
        <active>true</active>
        <description>Validates that the probability of a won opportunity is properly set to 100%. This is useful for data cleanliness and reporting purposes.</description>
        <errorConditionFormula>AND ( ISPICKVAL( StageName, &quot;Closed Won&quot;), Probability &lt;&gt; 1)</errorConditionFormula>
        <errorDisplayField>Probability</errorDisplayField>
        <errorMessage>Probability must be 100% for won opportunities.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Require_Year_1_Revenue</fullName>
        <active>true</active>
        <errorConditionFormula>AND( IsClosed =true, IsWon = true, ISNULL(Year_1_Estimated_Revenue__c))</errorConditionFormula>
        <errorDisplayField>Year_1_Estimated_Revenue__c</errorDisplayField>
        <errorMessage>You must enter the value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comic</fullName>
        <active>true</active>
        <description>Safeguard Comic Opportunities</description>
        <errorConditionFormula>CONTAINS(Product_Description__c, &quot;comic&quot; )</errorConditionFormula>
        <errorMessage>This opportunity must be approved by Jeff Statler, Mike Fragrassi or Gary Bohn before proceeding. Please contact your SFDC Administrator if there are any questions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Commit</fullName>
        <active>true</active>
        <description>Validates that the probability of a Commit opportunity is properly set to &gt; 80%. This is useful for data cleanliness and reporting purposes.</description>
        <errorConditionFormula>AND(ISPICKVAL(  ForecastCategoryName  , &quot;Commit&quot;),  OR(Probability   &lt;  0.81,  Probability   &gt; 0.99))</errorConditionFormula>
        <errorDisplayField>Probability</errorDisplayField>
        <errorMessage>Probability for Commit Forecast Category must be between 81% and 99%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_Customer</fullName>
        <active>true</active>
        <description>Cannot select New Customer if sales in last 12 months</description>
        <errorConditionFormula>AND(ISPICKVAL( Type   , &quot;New Customer - New Business&quot;),  OR(  Account.Previous_2Last_12Mo_Sales__c    &gt; 0))</errorConditionFormula>
        <errorMessage>The account chosen has sales volume within the previous 12 months. Please correct the TYPE to be &quot;Existing Customer - New Business&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_Customer_12_Months</fullName>
        <active>true</active>
        <description>Validate that New New is Used for Customer that are less than 12 months old.</description>
        <errorConditionFormula>AND(ISPICKVAL( Type   , &quot;Existing Customer - New Business&quot;),  OR(  Account.Previous_2Last_12Mo_Sales__c     &lt;=  0))</errorConditionFormula>
        <errorMessage>The account chosen does NOT have sales volume within the previous 12 months. Please correct the TYPE to be &quot;New Customer - New Business&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Omitted</fullName>
        <active>true</active>
        <description>If Omitted is Forecast Category, then Prob is 0%</description>
        <errorConditionFormula>AND ( ISPICKVAL(  ForecastCategoryName , &quot;Omitted&quot;), Probability &lt;&gt; 0)</errorConditionFormula>
        <errorDisplayField>Probability</errorDisplayField>
        <errorMessage>Probability must be 0% for Omitted in the Forecast Category or a Lost Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pipeline</fullName>
        <active>true</active>
        <description>Validates that the probability of a Pipeline opportunity is properly set to &lt; 50%. This is useful for data cleanliness and reporting purposes.</description>
        <errorConditionFormula>AND(ISPICKVAL(  ForecastCategoryName  , &quot;Pipeline&quot;),  OR(Probability   &lt;  0.01,  Probability   &gt; 0.50))</errorConditionFormula>
        <errorDisplayField>Probability</errorDisplayField>
        <errorMessage>Probability for Pipeline Forecast Category must be between 1% and 50%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RFI_RFP_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IsClosed,
     IsWon,
     RFI_RFP__c, 
     OR(ISNULL(Year_1_Estimated_GM__c) , 
	ISNULL( Year_1_Estimated_Revenue__c) ,
	ISNULL( Year_2_Estimated_GM__c) , 
	ISNULL( Year_2_Estimated_Revenue__c) , 
	ISNULL( Year_3_Estimated_GM__c) , 
	ISNULL( Year_3_Estimated_Revenue__c)
	) 
)</errorConditionFormula>
        <errorMessage>RFI/RFP opportunity require fileds :-  Year 1 Estimated GM %,Year 1 Estimated Revenue,Year 2 Estimated GM %,Year 2 Estimated Revenue,Year 3 Estimated GM %,Year 3 Estimated Revenue</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_ValidateCloseWon</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	NOT(HasOpportunityLineItem),
	IsClosed,
	IsWon
)</errorConditionFormula>
        <errorMessage>Closed won opportunity must have products associated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_To_Verified_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
    AND(
	Amount_Verified__c ,
	OR(
	    NOT(IsClosed),
	    NOT(IsWon),
	    (Amount &lt; 250000)
	    )
	), 
    true,
    false
   )</errorConditionFormula>
        <errorDisplayField>Amount_Verified__c</errorDisplayField>
        <errorMessage>This field is only applicable when amount is greater than 25K.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Won_Lost_Margin</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR(ISPICKVAL(StageName, &quot;Closed Lost&quot;), 

ISPICKVAL(StageName, &quot;Closed Won&quot;) 
), 
ISBLANK( Estimated_Gross_Margin__c ) 
)</errorConditionFormula>
        <errorDisplayField>Incumbent__c</errorDisplayField>
        <errorMessage>The following need to be completed: Estimated Gross Margin %, Gross Margin Information, and Margin Comments. NOTE : IF YOU ARE CLOSING AN OPPORTUNITY THAT WAS QUOTED OUT OF LOTUS OR BILL EST AND IS GREATER THAN $50K, IT WILL NEED TO BE REQUOTED THRU HAGEN</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Won_Lost_Reason</fullName>
        <active>true</active>
        <description>If opportunity is Won or Lost, then the Won/Lost Reason field is required.</description>
        <errorConditionFormula>AND(
           OR(ISPICKVAL(StageName, &quot;Closed Lost&quot;), 
                 ISPICKVAL(StageName, &quot;Closed Dropped&quot;) ,
                  ISPICKVAL(StageName, &quot;Closed Won&quot;)
           ),
         ISBLANK(Won_Lost_Reason__c)
)</errorConditionFormula>
        <errorDisplayField>Won_Lost_Reason__c</errorDisplayField>
        <errorMessage>Please enter the reason why the Opportunity was won or lost.</errorMessage>
    </validationRules>
</CustomObject>